# scgallery

./: .flake8  .gitignore  .gitmodules  README.md  azure.cred  design_opt.py  generate_image_cache.py  pyproject.toml
.github/workflows/: daily_ci.yml  designs.yml  docs.yml  general_ci.yml  large-designs.yml  lint.yml  montage.yml  python_ci.yml  run-designs.yml  wheels.yml
.github/workflows/config/: designs.json  get_jobs.py
docs/: Makefile  conf.py  designs.rst  index.rst  modules.rst  scgallery.rst
docs/_static/: custom.css
orfs/: README.md  gallery.py  translate.py
orfs/designs/aes/: rules.json
orfs/designs/ariane/: rules.json
orfs/designs/black_parrot/: rules.json
orfs/designs/chameleon/: rules.json
orfs/designs/dynamic_node/: rules.json
orfs/designs/ethmac/: rules.json
orfs/designs/gcd/: rules.json
orfs/designs/ibex/: rules.json
orfs/designs/jpeg/: rules.json
orfs/designs/microwatt/: rules.json
orfs/designs/mock_alu/: rules.json
orfs/designs/riscv32i/: rules.json
orfs/designs/swerv/: rules.json
orfs/designs/tiny_rocket/: rules.json
orfs/designs/uart/: rules.json
scgallery/: __init__.py  __main__.py  design.py  gallery.py  report.py  rules.py  run.py  translate.sh  translate_orfs.py
scgallery/apps/: sc_gallery.py
scgallery/checklists/: asicflow_rules.py  asicflow_template.json
scgallery/designs/: __init__.py  _common.py
scgallery/designs/_megaboom/: io.tcl  megaboom.py
scgallery/designs/_megaboom/constraints/: asap7sc7p5t_rvt.sdc  nangate45.sdc  sky130hd.sdc  sky130hs.sdc
scgallery/designs/aes/: aes.py  rules.json
scgallery/designs/aes/constraints/: asap7sc7p5t_lvt.sdc  asap7sc7p5t_rvt.sdc  asap7sc7p5t_slvt.sdc  gf180mcu_fd_sc_mcu7t5v0.sdc  gf180mcu_fd_sc_mcu9t5v0.sdc  gt2n_stdcells_w31_svt.sdc  nangate45.sdc  sg13g2_stdcell.sdc  sky130hd.sdc
scgallery/designs/ariane/: ariane.py
scgallery/designs/ariane/constraints/: asap7sc7p5t_lvt.sdc  asap7sc7p5t_rvt.sdc  asap7sc7p5t_slvt.sdc  gf180mcu_fd_sc_mcu7t5v0.sdc  gf180mcu_fd_sc_mcu9t5v0.sdc  nangate45.sdc  sg13g2_stdcell.sdc  sky130hd.sdc
scgallery/designs/ariane/extra/: hpdcache_sram_1rw.sv
scgallery/designs/ariane/src/: macros.v
scgallery/designs/black_parrot/: black_parrot.py  rules.json
scgallery/designs/black_parrot/bp_be/: rules.json
scgallery/designs/black_parrot/bp_fe/: rules.json
scgallery/designs/black_parrot/bp_multi/: rules.json
scgallery/designs/black_parrot/constraints/: asap7sc7p5t_lvt.sdc  asap7sc7p5t_rvt.sdc  asap7sc7p5t_slvt.sdc  gf180mcu_fd_sc_mcu7t5v0.sdc  gf180mcu_fd_sc_mcu9t5v0.sdc  nangate45.sdc  sg13g2_stdcell.sdc  sky130hd.sdc
scgallery/designs/black_parrot/extra/: bsg_mem_1rw_sync.sv  lambda.v  nangate45.v  (+3 more)
scgallery/designs/blinky/: blinky.py
scgallery/designs/bp_be/: rules.json
scgallery/designs/bp_fe/: rules.json
scgallery/designs/bp_multi/: rules.json
scgallery/designs/caliptra/: __init__.py  _common.py  datavault.py  keyvault.py  sha512.py
scgallery/designs/chameleon/: chameleon.py  rules.json
scgallery/designs/coralnpu/: coralnpu.py
scgallery/designs/cva6/: cva6.py
scgallery/designs/darkriscv/: darkriscv.py
scgallery/designs/dynamic_node/: dynamic_node.py  rules.json
scgallery/designs/ethmac/: ethmac.py  rules.json
scgallery/designs/fazyrv/: fazyrv.py
scgallery/designs/gcd/: gcd.py  rules.json
scgallery/designs/heartbeat/: heartbeat.py
scgallery/designs/ibex/: ibex.py  rules.json
scgallery/designs/jpeg/: jpeg.py  rules.json
scgallery/designs/microwatt/: microwatt.py  rules.json
scgallery/designs/mock_alu/: generate_resources.sh  mock_alu.py
scgallery/designs/openmsp430/: openmsp430.py
scgallery/designs/picorv32/: picorv32.py
scgallery/designs/qerv/: qerv.py
scgallery/designs/riscv32i/: riscv32i.py
scgallery/designs/serv/: serv.py
scgallery/designs/sha3/: rules.json  sha3.py
scgallery/designs/spi/: spi.py
scgallery/designs/swerv/: rules.json  swerv.py
scgallery/designs/tiny_rocket/: rules.json  tiny_rocket.py
scgallery/designs/uart/: rules.json  uart.py
scgallery/designs/wally/: wally.py  wallypipelinedcorewrapper.patch  wallypipelinedcorewrapper.v
scgallery/designs/zerosoc/: __init__.py  run_flat.py  run_hierarchy.py
scgallery/libraries/: fakeram45.py  fakeram7.py  skywater130_sram.py
scgallery/targets/: README.md  ihp130_demo.py  linting.py
scgallery/targets/asap7/: __init__.py  _common.py  asap7sc7p5t_lvt.py  asap7sc7p5t_rvt.py  asap7sc7p5t_slvt.py
scgallery/targets/freepdk45/: __init__.py  nangate45.py
scgallery/targets/gf180/: __init__.py  _common.py  gf180mcu_fd_sc_mcu7t5v0.py  gf180mcu_fd_sc_mcu9t5v0.py
scgallery/targets/gt2n/: __init__.py
scgallery/targets/ihp130/: __init__.py  sg13g2_stdcell.py
scgallery/targets/skywater130/: __init__.py  _common.py  sky130hd.py  sky130hdll.py
scgallery/templates/: design_detailed.html  details.html  overview.html
scripts/: convert_sdc.py  generate_data_table.py  generate_image_cache.py  report_configs.py  tile.sh  triage_failures.py
tests/: conftest.py  test_app.py  test_checklist.py  test_designs.py  test_gallery.py  test_rules.py
tests/data/: faux_target.py
(+270 files in other folders)
