[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "scgallery/_version.py"
write_to_template = '__version__ = "{version}" # noqa W292'

[tool.setuptools]
include-package-data = true
packages = [
    "scgallery"
]

[project]
name = "sc-gallery"
authors = [
    {name = "Peter Gadfort", email = "gadfort@zeroasic.com"},
]
description = "Design gallery for SiliconCompiler"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler>=0.29.0",
    "Jinja2>=3.1.2",
    "lambdapdk>=0.1.41",
    "lambdalib>=0.2.10"
]
dynamic = ["version"]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "pytest==8.3.4",
    "pytest-xdist==3.6.1"
]
lint = [
    "flake8==7.1.2",
    "tclint==0.5.0",
    "codespell==2.4.1"
]
docs = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2"
]

[project.urls]
"Homepage" = "https://github.com/siliconcompiler/scgallery"
"Bug Tracker" = "https://github.com/siliconcompiler/scgallery/issues"

[project.scripts]
sc-gallery = "scgallery.apps.sc_gallery:main"

[tool.pytest.ini_options]
markers = [
    "eda: this test requires EDA tools installed to run."
]
testpaths = "tests"

[tool.tclint]
exclude = [
    '.venv/',
    'build/'
]

[tool.tclint.style]
line-length = 100

[tool.check-wheel-contents]
ignore = [
    "W002"
]

[tool.codespell]
skip = './build,./scgallery/designs/*/build,*.json,./scgallery/designs/*/src/*.v,./scgallery/designs/*/extra/*.v,./scgallery/designs/*/extra/*.sv,./scgallery/designs/swerv/config/common_defines.vh'
count = true
quiet-level = 3
