[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "scgallery/_version.py"
write_to_template = '__version__ = "{version}" # noqa W292'

[tool.setuptools]
include-package-data = true
packages = [
    "scgallery"
]

[project]
name = "sc-gallery"
authors = [
    {name = "Peter Gadfort", email = "gadfort@zeroasic.com"},
]
description = "Design gallery for SiliconCompiler"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler>=0.33.0",
    "lambdapdk>=0.1.41",
    "lambdalib>=0.2.10"
]
dynamic = ["version"]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "pytest==8.3.5",
    "pytest-xdist==3.6.1",
    "pytest-cov == 5.0.0; python_version <= '3.8'",
    "pytest-cov == 6.1.1; python_version >= '3.9'"
]
lint = [
    "flake8==7.2.0",
    "tclint==0.5.4",
    "codespell==2.4.1"
]
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2"
]

[project.urls]
"Homepage" = "https://github.com/siliconcompiler/scgallery"
"Bug Tracker" = "https://github.com/siliconcompiler/scgallery/issues"

[project.scripts]
sc-gallery = "scgallery.apps.sc_gallery:main"

[tool.pytest.ini_options]
markers = [
    "eda: this test requires EDA tools installed to run."
]
testpaths = "tests"

[tool.tclint]
exclude = [
    '.venv/',
    'build/'
]

[tool.tclint.style]
line-length = 100

[tool.check-wheel-contents]
ignore = [
    "W002"
]

[tool.codespell]
skip = './build,./scgallery/designs/*/build,*.json,./scgallery/designs/*/src/*.v,./scgallery/designs/*/extra/*.v,./scgallery/designs/*/extra/*.sv,./scgallery/designs/swerv/config/common_defines.vh'
count = true
quiet-level = 3
