[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "scgallery/_version.py"
write_to_template = '__version__ = "{version}" # noqa W292'

[tool.setuptools]
include-package-data = true
packages = [
    "scgallery"
]

[project]
name = "sc-gallery"
authors = [
    {name = "Peter Gadfort", email = "gadfort@zeroasic.com"},
]
description = "Design gallery for SiliconCompiler"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "siliconcompiler>=0.35.0",
    "lambdapdk>=0.2.7",
    "lambdalib>=0.4.0"
]
dynamic = ["version"]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "pytest==8.4.2",
    "pytest-xdist==3.8.0",
    "pytest-cov == 7.0.0"
]
lint = [
    "flake8==7.3.0",
    "tclint==0.7.0",
    "codespell==2.4.1"
]
docs = [
    "sphinx==8.2.3",
    "sphinx-rtd-theme==3.0.2"
]

[project.urls]
"Homepage" = "https://github.com/siliconcompiler/scgallery"
"Bug Tracker" = "https://github.com/siliconcompiler/scgallery/issues"

[project.scripts]
sc-gallery = "scgallery.apps.sc_gallery:main"

[tool.pytest.ini_options]
markers = [
    "eda: this test requires EDA tools installed to run."
]
testpaths = "tests"

[tool.tclint]
exclude = [
    '.venv/',
    'build/'
]

[tool.tclint.style]
line-length = 100

[tool.check-wheel-contents]
ignore = [
    "W002"
]

[tool.codespell]
skip = './build,./scgallery/designs/*/build,*.json,./scgallery/designs/*/src/*.v,./scgallery/designs/*/extra/*.v,./scgallery/designs/*/extra/*.sv,./scgallery/designs/swerv/config/common_defines.vh'
count = true
quiet-level = 3
